--- a/package.json
+++ b/package.json
@@ -3,14 +3,10 @@
 "version": "1.0.0",
 "private": true,
 "type": "module",
-"scripts": {
-"start": "node server.js"
-},
+"scripts": { "start": "node server.js" },
 "dependencies": {
 "express": "4.19.2",
 "node-fetch": "3.3.2"
 },
-"engines": {
-"node": ">=18.x"
-}
+"engines": { "node": ">=18.x" }
 }
